--- a/empty_dot_tmux.conf
+++ b/empty_dot_tmux.conf
@@ -1,11 +1,13 @@
+set -g default-terminal "screen-256color"
+
 # remap prefix from 'C-b' to 'C-a'
 unbind C-b
 set-option -g prefix C-a
 bind-key C-a send-prefix
 
 # split panes using | and -
-bind | split-window -h
-bind - split-window -v
+bind x split-window -h
+bind v split-window -v
 unbind '"'
 unbind %
 
@@ -13,13 +15,17 @@ unbind %
 bind r source-file ~/.tmux.conf
 
 # switch panes with Alt and arrow keys
-bind -n M-Left select-pane -L
-bind -n M-Right select-pane -R
-bind -n M-Up select-pane -U
-bind -n M-Down select-pane -D
+bind -r h select-pane -L
+bind -r l select-pane -R
+bind -r k select-pane -U
+bind -r j select-pane -D
 
 # enable mouse mode
 set -g mouse on
 
 # use vim navigation in copy mode
 setw -g mode-keys vi
+
+# copy text with v and yank with y, like vim
+bind-key -T copy-mode-vi 'v' send -X begin-selection
+bind-key -T copy-mode-vi 'y' send -X copy-selection
