random changes made over time, 1/30/2023

--- a/empty_dot_tmux.conf
+++ b/empty_dot_tmux.conf
@@ -6,8 +6,8 @@ set-option -g prefix C-a
 bind-key C-a send-prefix
 
 # split panes using | and -
-bind x split-window -h
-bind v split-window -v
+bind | split-window -h
+bind - split-window -v
 unbind '"'
 unbind %
 
@@ -29,3 +29,7 @@ setw -g mode-keys vi
 # copy text with v and yank with y, like vim
 bind-key -T copy-mode-vi 'v' send -X begin-selection
 bind-key -T copy-mode-vi 'y' send -X copy-selection
+
+# set escape time so it stops acting weird
+set-option -sg escape-time 10
+
